--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>postbar</title>
+    <title>贴吧</title>
     <script>
       (function(doc, win) {
           var docEl = doc.documentElement,
